[gd_scene load_steps=13 format=3 uid="uid://0eod5ot6e5b8"]

[ext_resource type="PackedScene" uid="uid://b2a53t6xtelye" path="res://source/replay_state.tscn" id="1_mqri8"]
[ext_resource type="Script" path="res://source/scripts/rewatch_state.gd" id="2_53kra"]
[ext_resource type="Texture2D" uid="uid://dve8vqj2hvbn0" path="res://assets/backgrounds/background-1.png" id="3_6p24m"]
[ext_resource type="Texture2D" uid="uid://drisw86hb5du7" path="res://assets/backgrounds/foreground-1.png" id="4_v7lwa"]
[ext_resource type="Texture2D" uid="uid://bxvbt63obr7j1" path="res://assets/UI/Return_Button_Frames.png" id="5_v1dss"]
[ext_resource type="Texture2D" uid="uid://oimu8os7fkqs" path="res://assets/UI/Play_Button_Frames.png" id="6_3bp42"]
[ext_resource type="Theme" uid="uid://docpmippif7jn" path="res://source/resources/PlayStateText.tres" id="7_y5v6o"]
[ext_resource type="PackedScene" uid="uid://d1dm0gb8pvhv7" path="res://source/star_feed_back.tscn" id="8_oj00r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6qk5"]
atlas = ExtResource("5_v1dss")
region = Rect2(0, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhwgr"]
atlas = ExtResource("5_v1dss")
region = Rect2(298, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_soy2p"]
atlas = ExtResource("6_3bp42")
region = Rect2(0, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_7il42"]
atlas = ExtResource("6_3bp42")
region = Rect2(298, 0, 298, 0)

[node name="RewatchState" type="Node2D"]

[node name="ReplayState" parent="." instance=ExtResource("1_mqri8")]

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 720.0
script = ExtResource("2_53kra")

[node name="background" type="TextureRect" parent="Container"]
z_index = -1
layout_mode = 0
offset_right = 480.0
offset_bottom = 720.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_6p24m")

[node name="foreground" type="TextureRect" parent="Container"]
z_index = 7
layout_mode = 0
offset_right = 1600.0
offset_bottom = 2400.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2
texture = ExtResource("4_v7lwa")

[node name="ReturnButton" type="TextureButton" parent="Container"]
z_index = 10
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_top = 496.0
offset_right = 293.0
offset_bottom = 646.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture_normal = SubResource("AtlasTexture_t6qk5")
texture_hover = SubResource("AtlasTexture_dhwgr")
stretch_mode = 3

[node name="PlayButton" type="TextureButton" parent="Container"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = 136.0
offset_right = 117.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture_normal = SubResource("AtlasTexture_soy2p")
texture_hover = SubResource("AtlasTexture_7il42")

[node name="CurrentLevel" type="Label" parent="Container"]
z_index = 10
layout_mode = 0
offset_left = 83.0
offset_top = 399.0
offset_right = 223.0
offset_bottom = 489.0
theme = ExtResource("7_y5v6o")
text = "Level
1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentScore" type="Label" parent="Container"]
z_index = 10
layout_mode = 0
offset_left = 223.0
offset_top = 399.0
offset_right = 363.0
offset_bottom = 489.0
theme = ExtResource("7_y5v6o")
text = "Score
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HiScore" type="Label" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 37.0
offset_right = -60.0
offset_bottom = 127.0
grow_horizontal = 0
theme = ExtResource("7_y5v6o")
text = "Hi Score
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DoneBanner" type="Label" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -367.0
offset_top = 309.0
offset_right = -175.0
offset_bottom = 396.0
grow_horizontal = 0
theme = ExtResource("7_y5v6o")
text = "Winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarFeedBack" parent="Container" instance=ExtResource("8_oj00r")]
z_index = 9
offset_left = 34.0
offset_top = 567.0
offset_right = 794.0
offset_bottom = 810.0
scale = Vector2(0.555, 0.555)

[connection signal="pressed" from="Container/ReturnButton" to="Container" method="_on_menu_button_pressed"]
[connection signal="pressed" from="Container/PlayButton" to="Container" method="_on_play_button_pressed"]
